[metadata]
name = biaswise
version = 0.0.1
author = Adolfo Simaz Bunzel
author_email = asimazbunzel@iar.unlp.edu.ar
license = MIT
# license_file = LICENSE.rst
description = A python package to compute binary parameters after a core-collapse with an asymmetric kick
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
packages = find: 
install_requires = 
    numpy >= 1.16'
    matplotlib >= 3.3.2'
    seaborn >= 0.11.1'
