[metadata]
name = poskiorb
author = Adolfo Simaz Bunzel
author_email = asimazbunzel@iar.unlp.edu.ar
license = MIT
license_files = LICENSE
description = Python package that computes binary orbital parameters after a core-collapse with an asymmetric kick
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
python_requires = >= 3.7
packages = find: 
install_requires = 
    matplotlib
    numpy
    scipy
    seaborn
